--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,32 +1,88 @@
-version: 2
-jobs:
-  deploy_image:
+version: 2.1
+executors:
+  docker-publisher:
+    environment:
+      IMAGE_NAME: ic2h/diplomat
     docker:
-      - image: docker:git
+      - image: circleci/buildpack-deps:stretch
+jobs:
+  build:
+    executor: docker-publisher
     steps:
-      - setup_remote_docker
       - checkout
+      - setup_remote_docker
       - run:
-          name: Docker Login
-          command: echo $DOCKER_PASS | docker login --username $DOCKER_USER --password-stdin
-      - run:
-          name: Build and Push Image
+          name: Build Docker image
           command: |
-            TAG=$(git describe --tags $(git rev-list --tags --max-count=1))
-            docker build -t ic2h/diplomat:$TAG .
-            docker push ic2h/diplomat:$TAG
-
+            docker build -t $IMAGE_NAME:latest .
+      - run:
+          name: Archive Docker image
+          command: docker save -o image.tar $IMAGE_NAME
+      - persist_to_workspace:
+          root: .
+          paths:
+            - ./image.tar
+  publish-latest:
+    executor: docker-publisher
+    steps:
+      - attach_workspace:
+          at: /tmp/workspace
+      - setup_remote_docker
+      - run:
+          name: Load archived Docker image
+          command: docker load -i /tmp/workspace/image.tar
+      - run:
+          name: Publish Docker Image to Docker Hub
+          command: |
+            echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
+            IMAGE_TAG="0.0.${CIRCLE_BUILD_NUM}"
+            docker tag $IMAGE_NAME:latest $IMAGE_NAME:$IMAGE_TAG
+            docker push $IMAGE_NAME:latest
+            docker push $IMAGE_NAME:$IMAGE_TAG
+  publish-tag:
+    executor: docker-publisher
+    steps:
+      - attach_workspace:
+          at: /tmp/workspace
+      - setup_remote_docker
+      - run:
+          name: Load archived Docker image
+          command: docker load -i /tmp/workspace/image.tar
+      - run:
+          name: Publish Docker Image to Docker Hub
+          command: |
+            echo "$DOCKER_PASS" | docker login -u "$DOCKERHUB_USER" --password-stdin
+            IMAGE_TAG=${CIRCLE_TAG/v/''}
+            docker tag $IMAGE_NAME:latest $IMAGE_NAME:$IMAGE_TAG
+            docker push $IMAGE_NAME:latest
+            docker push $IMAGE_NAME:$IMAGE_TAG
 workflows:
   version: 2
-  build-workflow:
+  build-master:
     jobs:
-      - deploy_hold:
-          type: approval
-      - deploy_image:
-          requires:
-            - deploy_hold
+      - build:
           filters:
-            branch:
-              - master
+            branches:
+              only: master
+      - publish-latest:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
+  build-tags:
+    jobs:
+      - build:
+          filters:
             tags:
-              only: /^\d[.]\d[.]\d.*/
+              only: /^v.*/
+            branches:
+              ignore: /.*/
+      - publish-tag:
+          requires:
+            - build
+          filters:
+            tags:
+              only: /^v.*/
+            branches:
+              ignore: /.*/
