--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,10 +35,8 @@ jobs:
           name: Publish Docker Image to Docker Hub
           command: |
             echo $DOCKER_PASS | docker login --username $DOCKER_USER --password-stdin
-            IMAGE_TAG="0.0.${CIRCLE_BUILD_NUM}"
-            docker tag $IMAGE_NAME:latest $IMAGE_NAME:$IMAGE_TAG
+            docker tag $IMAGE_NAME:latest
             docker push $IMAGE_NAME:latest
-            docker push $IMAGE_NAME:$IMAGE_TAG
   publish-tag:
     executor: docker-publisher
     steps:
